fix: correct z-index to show language options (#92)

--- a/client/components/LanguageDropdown/LanguageDropdown.module.css
+++ b/client/components/LanguageDropdown/LanguageDropdown.module.css
@@ -1,6 +1,5 @@
 .languageDropdown {
   position: fixed;
-  z-index: 2;
   top: 55px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   background-color: white;
