--- a/client/components/TopNav/TopNav.module.css
+++ b/client/components/TopNav/TopNav.module.css
@@ -78,6 +78,7 @@
 }
 
 .top-nav {
+  z-index: 1;
   display: flex;
   position: fixed;
   width: 100%;
